alignment issue fixed in PDP

--- a/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_pdp.scss
+++ b/ext/marketplace/marketplacestorefront/web/webroot/_ui/responsive/theme-luxury/sass/site/pages/_pdp.scss
@@ -69,6 +69,9 @@
     .size-feature>h5{
         display: inline-block; 
         width: 65%;
+         @include media-breakpoint-down(sm) {
+              width: 49%;
+        }
     }
     .size-feature .size-guide{
         display: inline-block;
